--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/hienb/Downloads/postgresql-42.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/hienb/Downloads/postgresql-42.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/DOWNLOADS/postgresql-42.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
