--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ bin/server/ServerThreadBus.class
 bin/ui/activity/Application.class
 /bin/
 bin/server/ServerThread$1.class
+bin/server/ServerThread$1.class
