--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/hienb/Downloads/postgresql-42.7.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/hienb/Downloads/activation.jar"/>
 	<classpathentry kind="lib" path="C:/Users/hienb/Downloads/mail.jar"/>
-	<classpathentry kind="lib" path="C:/Users/hienb/Downloads/jfreechart-1.0.19/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hienb/Downloads/jfreechart-1.0.12.jar/jfreechart-1.0.12.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
